perbaikan notifikasi batch