@@ -13,8 +13,16 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.TemporalAccessor;
 import java.util.*;
 
+/**
+ * Service untuk manajemen & rendering template notifikasi.
+ * Placeholder yang didukung (default):
+ * {{sapaan}}, {{nama}}, {{namaSertifikasi}}, {{berlakuSampai}}, {{namaBatch}},
+ * {{mulaiTanggal}}
+ * Bisa nambah placeholder lain via overload generate* dengan "extras".
+ */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -22,8 +30,8 @@ public class NotificationTemplateService {
 
     private final NotificationTemplateRepository repository;
 
-    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("d MMMM yyyy",
-            new Locale("id", "ID"));
+    private static final Locale ID_LOCALE = new Locale("id", "ID");
+    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("d MMMM yyyy", ID_LOCALE);
 
     // ================== LIST ==================
     @Transactional(readOnly = true)
@@ -55,7 +63,7 @@ public class NotificationTemplateService {
             template.setBody(body.trim());
         }
 
-        // Validasi biar gak kosong
+        // Validasi agar tidak kosong
         if (template.getTitle() == null || template.getTitle().isBlank()) {
             throw new IllegalArgumentException("Judul template tidak boleh kosong");
         }
@@ -71,7 +79,9 @@ public class NotificationTemplateService {
         return updated;
     }
 
-    // ================== GENERATE TITLE ==================
+    // ================== GENERATE (TITLE/BODY) ==================
+    /** Versi simpel: variabel standar. */
+    @Transactional(readOnly = true)
     public String generateTitle(
             NotificationTemplate.Code code,
             Employee employee,
@@ -83,7 +93,8 @@ public class NotificationTemplateService {
         return replaceVariables(template.getTitle(), employee, namaSertifikasi, berlakuSampai, namaBatch, mulaiTanggal);
     }
 
-    // ================== GENERATE BODY ==================
+    /** Versi simpel: variabel standar. */
+    @Transactional(readOnly = true)
     public String generateMessage(
             NotificationTemplate.Code code,
             Employee employee,
@@ -95,6 +106,30 @@ public class NotificationTemplateService {
         return replaceVariables(template.getBody(), employee, namaSertifikasi, berlakuSampai, namaBatch, mulaiTanggal);
     }
 
+    /**
+     * Versi fleksibel (opsional): bisa nyisipin variabel tambahan.
+     * Contoh extras:
+     * Map.of("{{jenisBatch}}","CERTIFICATION", "{{lembaga}}","AAJI",
+     * "{{tanggalSelesai}}", LocalDate.now())
+     */
+    @Transactional(readOnly = true)
+    public String generateTitle(
+            NotificationTemplate.Code code,
+            Employee employee,
+            Map<String, Object> extras) {
+        NotificationTemplate template = getTemplateByCode(code);
+        return renderWithExtras(template.getTitle(), employee, extras);
+    }
+
+    @Transactional(readOnly = true)
+    public String generateMessage(
+            NotificationTemplate.Code code,
+            Employee employee,
+            Map<String, Object> extras) {
+        NotificationTemplate template = getTemplateByCode(code);
+        return renderWithExtras(template.getBody(), employee, extras);
+    }
+
     // ================== VARIABLE REPLACEMENT ==================
     private String replaceVariables(
             String text,
@@ -103,34 +138,59 @@ public class NotificationTemplateService {
             LocalDate berlakuSampai,
             String namaBatch,
             LocalDate mulaiTanggal) {
-
-        if (text == null || text.isBlank())
+        if (isBlank(text))
             return "-";
 
-        String result = text;
+        Map<String, String> baseVars = new LinkedHashMap<>();
+        baseVars.put("{{sapaan}}", getSapaan(employee));
+        baseVars.put("{{nama}}", safe(employee != null ? employee.getName() : null));
+        baseVars.put("{{namaSertifikasi}}", safe(namaSertifikasi));
+        baseVars.put("{{berlakuSampai}}", formatTanggal(berlakuSampai));
+        baseVars.put("{{namaBatch}}", safe(namaBatch));
+        baseVars.put("{{mulaiTanggal}}", formatTanggal(mulaiTanggal));
 
-        Map<String, String> variables = Map.ofEntries(
-                Map.entry("{{sapaan}}", getSapaan(employee)),
-                Map.entry("{{nama}}", safe(employee != null ? employee.getName() : null)),
-                Map.entry("{{namaSertifikasi}}", safe(namaSertifikasi)),
-                Map.entry("{{berlakuSampai}}", formatTanggal(berlakuSampai)),
-                Map.entry("{{namaBatch}}", safe(namaBatch)),
-                Map.entry("{{mulaiTanggal}}", formatTanggal(mulaiTanggal)));
-
-        for (var entry : variables.entrySet()) {
-            result = result.replace(entry.getKey(), entry.getValue());
-        }
+        String result = applyVariables(text, baseVars);
 
         log.debug("🧩 Template processed: {}", result);
         return result;
     }
 
-    // ================== UTIL ==================
-    private String getSapaan(Employee employee) {
-        if (employee == null || employee.getGender() == null || employee.getGender().isBlank()) {
-            return "Bapak/Ibu";
+    private String renderWithExtras(String text, Employee employee, Map<String, Object> extras) {
+        if (isBlank(text))
+            return "-";
+
+        // Variabel dasar tetap tersedia
+        Map<String, String> vars = new LinkedHashMap<>();
+        vars.put("{{sapaan}}", getSapaan(employee));
+        vars.put("{{nama}}", safe(employee != null ? employee.getName() : null));
+
+        // Tambahan dari extras (boleh LocalDate/LocalDateTime/String/Number)
+        if (extras != null && !extras.isEmpty()) {
+            for (Map.Entry<String, Object> e : extras.entrySet()) {
+                String key = e.getKey();
+                Object val = e.getValue();
+                vars.put(key, stringify(val));
+            }
         }
 
+        String result = applyVariables(text, vars);
+        log.debug("🧩 Template processed (extras): {}", result);
+        return result;
+    }
+
+    private String applyVariables(String template, Map<String, String> vars) {
+        String result = template;
+        for (var entry : vars.entrySet()) {
+            result = result.replace(entry.getKey(), entry.getValue());
+        }
+        return result;
+    }
+
+    // ================== UTIL ==================
+    private String getSapaan(Employee employee) {
+        if (employee == null || isBlank(employee.getGender())) {
+            return "Bapak/Ibu";
+        }
         return switch (employee.getGender().trim().toUpperCase()) {
             case "M" -> "Bapak";
             case "F" -> "Ibu";
@@ -138,16 +198,35 @@ public class NotificationTemplateService {
         };
     }
 
-    private String formatTanggal(LocalDate tanggal) {
+    private String formatTanggal(TemporalAccessor tanggal) {
         try {
-            return tanggal != null ? tanggal.format(DATE_FORMATTER) : "-";
+            if (tanggal == null)
+                return "-";
+            if (tanggal instanceof LocalDate ld)
+                return ld.format(DATE_FORMATTER);
+            if (tanggal instanceof LocalDateTime ldt)
+                return ldt.toLocalDate().format(DATE_FORMATTER);
+            // Fallback: coba cast ke LocalDate
+            return DATE_FORMATTER.format(tanggal);
         } catch (Exception e) {
             log.warn("⚠️ Gagal format tanggal: {}", e.getMessage());
             return "-";
         }
     }
 
+    private String stringify(Object val) {
+        if (val == null)
+            return "-";
+        if (val instanceof TemporalAccessor ta)
+            return formatTanggal(ta);
+        return String.valueOf(val);
+    }
+
     private String safe(String val) {
-        return (val != null && !val.isBlank()) ? val : "-";
+        return (!isBlank(val)) ? val : "-";
+    }
+
+    private boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 }
